compiler-core/src/snapshots/gleam_core__codegen__wasm_2n.snap
---
source: compiler-core/src/codegen.rs
expression: w.to_wat()
---
(module
(func $add (export "add") (param $x i32) (param $y i32) (result i32)
    (local.get $x)
    (local.get $y)
    (i32.add)))
