compiler-core/src/snapshots/gleam_core__codegen__wasm_4nd-2.snap
---
source: compiler-core/src/codegen.rs
expression: wasm_string_bytes
---
0x00
0x61
0x73
0x6D
0x01
0x00
0x00
0x00
0x01
0x0D
0x02
0x60
0x02
0x7F
0x7F
0x01
0x7F
0x60
0x02
0x7F
0x7F
0x01
0x7F
0x03
0x03
0x02
0x01
0x00
0x07
0x07
0x01
0x03
0x61
0x64
0x64
0x00
0x01
0x0A
0x12
0x02
0x07
0x00
0x20
0x00
0x20
0x01
0x6A
0x0B
0x08
0x00
0x20
0x00
0x20
0x01
0x10
0x00
0x0B
