compiler-core/src/snapshots/gleam_core__codegen__wasm_4nd.snap
---
source: compiler-core/src/codegen.rs
expression: wat
---
(module
(func $internal_add (param $x i32) (param $y i32) (result i32)
    (local.get $x)
    (local.get $y)
    (i32.add))
(func $add (export "add") (param $x i32) (param $y i32) (result i32)
    (call $internal_add (local.get $x) (i32.const 1) (i32.add) (local.get $y))))
