compiler-core/src/snapshots/gleam_core__codegen__wasm_5nd.snap
---
source: compiler-core/src/codegen.rs
expression: wat
---
(module
(type $Cat_struct (struct (field $name i32) (field $cuteness i32)))
(func $Cat (param $name i32) (param $cuteness i32) (result (ref $Cat_struct))
    (local.get $name)
    (local.get $cuteness)
    (struct.new $Cat_struct))
(func $add (export "add") (param $x i32) (param $y i32) (result i32)
    (local $cat1 (ref $Cat_struct))
    (call $Cat (local.get $x) (local.get $y))
    (local.set $cat1)
    (local.get $cat1)
    (struct.get $Cat_struct $cuteness)
    (local.get $cat1)
    (struct.get $Cat_struct $name)
    (i32.add)))
