compiler-core/src/snapshots/gleam_core__codegen__wasm_6nd-2.snap
---
source: compiler-core/src/codegen.rs
expression: wasm_string_bytes
---
0x00
0x61
0x73
0x6D
0x01
0x00
0x00
0x00
0x01
0x31
0x07
0x5F
0x02
0x7F
0x00
0x7F
0x00
0x60
0x02
0x7F
0x7F
0x01
0x64
0x00
0x5F
0x03
0x7F
0x00
0x7F
0x00
0x7F
0x00
0x60
0x03
0x7F
0x7F
0x7F
0x01
0x64
0x02
0x60
0x01
0x64
0x00
0x01
0x7F
0x60
0x01
0x64
0x02
0x01
0x64
0x00
0x60
0x02
0x7F
0x7F
0x01
0x7F
0x03
0x06
0x05
0x01
0x03
0x04
0x05
0x06
0x07
0x07
0x01
0x03
0x61
0x64
0x64
0x00
0x04
0x0A
0x58
0x05
0x09
0x00
0x20
0x00
0x20
0x01
0xFB
0x00
0x00
0x0B
0x0B
0x00
0x20
0x00
0x20
0x01
0x20
0x02
0xFB
0x00
0x02
0x0B
0x0F
0x00
0x20
0x00
0xFB
0x02
0x00
0x01
0x20
0x00
0xFB
0x02
0x00
0x00
0x6A
0x0B
0x13
0x00
0x20
0x00
0xFB
0x02
0x02
0x00
0x20
0x00
0xFB
0x02
0x02
0x02
0x41
0x01
0x6B
0x10
0x00
0x0B
0x1C
0x02
0x01
0x64
0x02
0x01
0x64
0x00
0x20
0x00
0x41
0x0C
0x20
0x01
0x10
0x01
0x21
0x02
0x20
0x02
0x10
0x03
0x21
0x03
0x20
0x03
0x10
0x02
0x0B
